--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </form>
 
     <div id="no-mobile">
-      <span>Your screen is super big ㅠㅠ</span>
+      <span>Your screen is too big ㅠㅠ</span>
     </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
