--- a/find.html
+++ b/find.html
@@ -29,7 +29,7 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons screen-header__cog">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
         <div> </div>
 
         
@@ -61,7 +61,7 @@
                 <h5 class="open-post__title">#BTS</h5>
                 <h6 class="open-post__hashtags">#bts#army#friends</h6>
                 <div class="open-post__members">
-                    <img src="Screenshots/name.jpg"/>
+                    <img src="Screenshots/pictures.jpg/3.jpg"/>
                     <span class="open-post__member-count">802 members</span>
                     <div class="divider"></div>
                     <span class="open-post__member-status">Active</span>
@@ -71,7 +71,7 @@
             </div>
             <div class="open-post__column">
               <div class="open-post__photo">
-                <img src="Screenshots/name.jpg"/>
+                <img src="Screenshots/pictures.jpg/2.jpg"/>
                 <div class="open-post__heart-count"><i class="fas fa-heart fa-xs"></i><span>326</span></div>
               </div>
             </div>
