--- a/chats.html
+++ b/chats.html
@@ -27,11 +27,12 @@
 
     <header class="screen-header">
       <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
+      <div class="screen-header__icons screen-header__cog">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
+        <div> </div>
       </div>
 
     </header>
@@ -41,7 +42,7 @@
     <a href="chat.html">
       <div class="user-component">
       <div class="user-component__column">
-        <img src="Screenshots/name.jpg" 
+        <img src="Screenshots/pictures.jpg/4.jpg" 
         class="user-component__avatar user-component__avatar">
         <div class="user-component__text">
           <h4 class="user-component__title">Ye ByungSoo</h4>
