--- a/friends.html
+++ b/friends.html
@@ -28,10 +28,11 @@
 
     <header class="screen-header">
       <h1 class="screen-header__title">Friends</h1>
-      <div class="screen-header__icons">
+      <div class="screen-header__icons screen-header__cog">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
+        <div> </div>
       </div>
 
     </header>
@@ -43,7 +44,7 @@
   <main class="friends-screen">
     <div class="user-component">
       <div class="user-component__column">
-        <img src="Screenshots/name.jpg" 
+        <img src="Screenshots/pictures.jpg/1.jpg" 
         class="user-component__avatar user-component__avatar--xl">
         <div class="user-component__text">
           <h4 class="user-component__title">Ye ByungSoo</h4>
@@ -59,7 +60,7 @@
       </div>
       <div class="user-component">
         <div class="user-component__column">
-          <img src="Screenshots/name.jpg" 
+          <img src="Screenshots/pictures.jpg/5.jpg" 
           class="user-component__avatar user-component__avatar--sm">
           
           <div class="user-component__text">
