--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <span>110%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
-        `
       </div>
     </div>
 
@@ -31,8 +30,8 @@
     </header>
 
     <form action="friends.html" method="get" id="login-form" >
-      <input name="username" type="text" placeholder="Email or phone number">
-      <input name="password" type="password" placeholder="Password">
+      <input required name="username" type="text" placeholder="Email or phone number">
+      <input required name="password" type="password" placeholder="Password" minlength="8">
       <input type="submit" value="Log in">
         <a href="#">Find Kokoa Account or Password</a>
     </form>
