byungsoo's kokoa talk

--- a/find.html
+++ b/find.html
@@ -58,8 +58,8 @@
         </div>
         <div class="open-post">
             <div class="open-post__column">
-                <h5 class="open-post__title">#BTS</h5>
-                <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                <h5 class="open-post__title">#MARCO</h5>
+                <h6 class="open-post__hashtags">#marco#soo#friends</h6>
                 <div class="open-post__members">
                     <img src="Screenshots/pictures.jpg/3.jpg"/>
                     <span class="open-post__member-count">802 members</span>
